--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,15 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.antlr-2.7.7.jar=lib/antlr-2.7.7.jar
+file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
+file.reference.hibernate-commons-annotations-4.0.1.Final.jar=lib/hibernate-commons-annotations-4.0.1.Final.jar
+file.reference.hibernate-core-4.1.10.Final.jar=lib/hibernate-core-4.1.10.Final.jar
+file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=lib/hibernate-jpa-2.0-api-1.0.1.Final.jar
+file.reference.javassist-3.15.0-GA.jar=lib/javassist-3.15.0-GA.jar
 file.reference.javax.faces-2.1.12.jar=lib/javax.faces-2.1.12.jar
+file.reference.jboss-logging-3.1.0.GA.jar=lib/jboss-logging-3.1.0.GA.jar
+file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar=lib/jboss-transaction-api_1.1_spec-1.0.0.Final.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=lib/mysql-connector-java-5.1.23-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +48,15 @@ jar.compress=false
 javac.classpath=\
     ${libs.jstl11.classpath}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.javax.faces-2.1.12.jar}
+    ${file.reference.javax.faces-2.1.12.jar}:\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate-commons-annotations-4.0.1.Final.jar}:\
+    ${file.reference.hibernate-core-4.1.10.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar}:\
+    ${file.reference.javassist-3.15.0-GA.jar}:\
+    ${file.reference.jboss-logging-3.1.0.GA.jar}:\
+    ${file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
