configurando acessos de usuários

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -21,4 +21,9 @@
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
+    </welcome-file-list>
+        <error-page>
+        <exception-type>javax.faces.application.ViwerExpiredException</exception-type>
+        <location>/index.xhtml</location>
+    </error-page>
 </web-app>
